--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "pdf-image": "^2.0.0"
   },
   "scripts": {
     "start": "nodemon index.js"
