--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
     "mysql": "^2.16.0",
+    "nodemailer": "^4.7.0",
     "pdf-image": "^2.0.0"
   },
   "scripts": {
