--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
     "mysql": "^2.16.0",
-    "nodemailer": "^4.7.0",
-    "pdf-image": "^2.0.0"
+    "nodemailer": "^4.7.0"
   },
   "scripts": {
     "start": "nodemon index.js"
