--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.3",
+    "csv-parser": "^2.3.2",
+    "csvtojson": "^2.0.10",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "knex": "^0.15.2",
